
5.1.0 -> 5.2a0:
    - jbj: eliminate unused FDIO_t vectors. XfdLink/XfdFree/XfdNew need nuking.
    - jbj: create lzdio.c to carry lzma comprssion, possibly w dlopen().
    - jbj: merge OpenSUSE lzma.diff patch.
    - jbj: preliminary support for internal -lzma (non-functional atm).
    - jbj: add lzma checkout to devtool system target.
    - jbj: disable loop unraveling error msgs for now. better needs to be done.
    - jbj: permit firefox debugging by creating an empty dir (#444310).
    - afb/rse: add initial "devtool standalone" and Autoconf support for building against LZMA Utils
    - jbj: add --enable-build-gcov for CFLAGS -fprofile-arcs -ftest-coverage.
    - jbj: header: free tag data on error retrurn with damaged data.
    - rpm.org: rpmsw: insure that time has passed while calibrating (#435309).
    - jbj: header: fix: avoid double free with damaged data (#442761).
    - jbj: rpmte: revert to individual tags instead of RPMTAG_NVRA.
    - jbj: rpmte: fix: snip ".arch" from "-release", same NEVRA check broke.
    - afb: fix VPATH builds finding rpmversion.h (in build)
    - afb: fix parallel build of rpmdigest (automake quirk)
    - afb: disable intl/iconv for popt 1.14 under Mac OS X
    - nkukard: support building under Linux/uClibc in addition to Linux/GLIBC
    - jbj: update {nl,pl,sl,sv,vi}.po from Translation Project.
    - rse: replace obsolete AC_AIX and AC_MINIX checks with newer AC_USE_SYSTEM_EXTENSIONS to get rid of Autoconf warnings
    - proyvind: improve %_smp_mflags so that it will correctly detect number of cpus on macos, while defaulting to 1 cpu if unable to detect
    - proyvind: move some macros that's identical for each platform macros to standard macros
    - rse: upgrade build environment to GNU autoconf 2.62
    - rse: use latest POPT 1.14 for building with "devtool standalone"
    - rse: prepared build-tree for RPM 5.2 development after branching

=============================================================================
